--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,25 @@
-.venv
-.idea
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+
+# Distribution / packaging
+dist/
+build/
+*.egg-info/
+
+# Virtual Environment
+.venv/
+venv/
+ENV/
+
+# IDE
+.idea/
+.vscode/
+
+# Logs
+logs/
+*.log
+
+# Local configuration
+config/*.csv
